<?xml version="1.0" encoding="utf-8"?>
<com.baoyz.widget.PullRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:williamchart="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:id="@+id/swipeRefreshLayout"
    tools:context="pankaj.sharma.weather.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:baselineAligned="true"
        android:fillViewport="true"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/circle"
                android:layout_margin="10dp"
                android:text="@string/dt"
                android:textColor="@android:color/white"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/temp"
                android:background="@drawable/circle"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:textSize="50sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:background="@drawable/circle"
                android:layout_margin="10dp"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/tempicon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/clear" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/place"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/place"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/place"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:background="@drawable/circle"
                android:layout_margin="10dp"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                android:baselineAligned="false"
                android:fillViewport="true"
                android:orientation="horizontal"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/windy" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/wind"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/sundowna" />

                        <TextView
                            android:id="@+id/tsundown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/mint"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/sunup" />

                        <TextView
                            android:id="@+id/tsunup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/mint"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/tempminflat" />

                        <TextView
                            android:id="@+id/tmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/mint"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/tempmaxflat" />

                        <TextView
                            android:id="@+id/tmax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/maxt"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/humi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/hum"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="@drawable/circle"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            app:srcCompat="@drawable/pressure" />

                        <TextView
                            android:id="@+id/tex45tView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/textview"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>


            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/htemp"
                    android:padding="5dp"
                    android:background="@drawable/circle"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.baoyz.widget.PullRefreshLayout>
